Causeview Package Complete/src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Secondary_Salutation__c</fullName>
        <description>Individual&apos;s secondary salutation - used for communication with individual.</description>
        <label>Secondary Salutation</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solicit_Codes__c</fullName>
        <label>Solicit Codes</label>
        <picklist>
            <picklistValues>
                <fullName>All Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All E-Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 Mailing Per Year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information Only, No Solicitation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Special Ask</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No E-Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Direct Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Communication of Any Kind</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Steward_Acknowledgement_Letter__c</fullName>
        <description>How many acknowledgement letters have occured with this contact</description>
        <label>Acknowledgement Letter</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Steward_Emails__c</fullName>
        <description>How many emails have occured with this contact</description>
        <label>Emails</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Steward_Face_to_Face_Meetings__c</fullName>
        <description>How many Face to Face meetings have occured with this contact</description>
        <label>Face to Face Meetings</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Steward_Personal_Emails__c</fullName>
        <label>Personal Emails</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Steward_Phone_Calls__c</fullName>
        <description>How many Phone calls that have occured with this contact</description>
        <label>Phone Calls</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Student</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Suffix__c</fullName>
        <label>Suffix</label>
        <picklist>
            <picklistValues>
                <fullName>Jr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>II</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>V</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Esq.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.D.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ph.D.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C.P.A.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.S.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R.N.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.B.A.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L.L.M.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ed.D.</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Sys_Donor_Segmentation__c</fullName>
        <label>_Sys:Donor Segmentation</label>
        <picklist>
            <picklistValues>
                <fullName>First Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returning</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sys_No_Availability__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sys No Availability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Fiscal_Fundraising__c</fullName>
        <description>Total Fundraising in the current fiscal year</description>
        <inlineHelpText>Total Fundraising in the current fiscal year</inlineHelpText>
        <label>Total Fiscal Fundraising</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Fiscal_Gifts__c</fullName>
        <description>Total number of gifts by constituent within current fiscal year</description>
        <inlineHelpText>Total number of gifts by constituent within current fiscal year</inlineHelpText>
        <label>Quantity of Fiscal Gifts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Fiscal_Transaction_Amount__c</fullName>
        <description>Total dollar value of transactions by constituent within current fiscal year</description>
        <inlineHelpText>Total dollar value of transactions by constituent within current fiscal year</inlineHelpText>
        <label>Total Fiscal Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Fiscal_Transactions__c</fullName>
        <description>Total number of transactions by constituent within current fiscal year</description>
        <inlineHelpText>Total number of transactions by constituent within current fiscal year</inlineHelpText>
        <label>Quantity of Fiscal Transactions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Fiscal_Year_Giving__c</fullName>
        <description>Total dollar value of gifts by constituent within current fiscal year</description>
        <inlineHelpText>Total dollar value of gifts by constituent within current fiscal year</inlineHelpText>
        <label>Total Fiscal Year Giving</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Fiscal_Year_In_Kind_Value__c</fullName>
        <description>Total In-Kind value of all volunteer hours for the current fiscal year.</description>
        <formula>Total_Service_Hours_Completed_This_Year__c *  $Setup.App_Settings__c.Volunteer_In_Kind_Hour_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Determines the total fiscal YTD in-kind value of the volunteer service hours at a specific rate.</inlineHelpText>
        <label>Total Fiscal Year In-Kind Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Fundraising_Last_Fiscal_Year__c</fullName>
        <description>Total Fundraising for the last fiscal year</description>
        <inlineHelpText>Total Fundraising for the last fiscal year</inlineHelpText>
        <label>Total Fundraising last Fiscal year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Giving_Last_Year__c</fullName>
        <description>Total amount of giving last year</description>
        <inlineHelpText>Total amount of giving last year</inlineHelpText>
        <label>Total Giving Last Year</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Giving_Two_Years_Ago__c</fullName>
        <description>Total amount of giving from two years ago</description>
        <inlineHelpText>Total amount of giving from two years ago</inlineHelpText>
        <label>Total Giving Two Years Ago</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Lifetime_Fundraising__c</fullName>
        <description>Total lifetime fundraising by constituent.  Includes all giving, primary solicitations and soft credits</description>
        <inlineHelpText>Total lifetime fundraising by constituent.  Includes all giving, primary solicitations and soft credits</inlineHelpText>
        <label>Total Lifetime Fundraising</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Lifetime_Gifts__c</fullName>
        <description>Total number of gifts by constituent within lifetime</description>
        <inlineHelpText>Total number of gifts by constituent within lifetime</inlineHelpText>
        <label>Quantity of Lifetime Gifts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Lifetime_Giving__c</fullName>
        <description>Total dollar value of gifts by constituent within lifetime</description>
        <inlineHelpText>Total dollar value of gifts by constituent within lifetime</inlineHelpText>
        <label>Total Lifetime Giving</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Lifetime_In_Kind_Value__c</fullName>
        <description>Total In-Kind value of all volunteer hours</description>
        <formula>Total_Service_Hours_Completed__c *  $Setup.App_Settings__c.Volunteer_In_Kind_Hour_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Determines the total lifetime In-Kind value of the volunteer service hours at a specific rate.</inlineHelpText>
        <label>Total Lifetime In-Kind Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Lifetime_Transaction_Amount__c</fullName>
        <description>Total dollar value of transactions by constituent within lifetime</description>
        <inlineHelpText>Total dollar value of transactions by constituent within lifetime</inlineHelpText>
        <label>Total Lifetime Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Lifetime_Transactions__c</fullName>
        <description>Total number of transactions by constituent within lifetime</description>
        <inlineHelpText>Total number of transactions by constituent within lifetime</inlineHelpText>
        <label>Quantity of Lifetime Transactions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Miles_Traveled_This_Year__c</fullName>
        <description>Sum of all miles traveled for volunteer hours in the current fiscal year.</description>
        <label>Total Fiscal Year Miles Traveled</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Miles_Traveled__c</fullName>
        <description>Sum of all miles traveled for volunteer hours.</description>
        <label>Total Lifetime Miles Traveled</label>
        <summarizedField>Volunteer_Hours__c.Mileage__c</summarizedField>
        <summaryFilterItems>
            <field>Volunteer_Hours__c.Status__c</field>
            <operation>equals</operation>
            <value>Confirmed</value>
        </summaryFilterItems>
        <summaryForeignKey>Volunteer_Hours__c.Volunteer__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Service_Hours_Completed_This_Year__c</fullName>
        <description>Sum of all logged volunteer hours for the current fiscal year.</description>
        <label>Total Fiscal Year Service Hours Complete</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Service_Hours_Completed__c</fullName>
        <description>Sum of all logged volunteer hours.</description>
        <label>Total Lifetime Service Hours Complete</label>
        <summarizedField>Volunteer_Hours__c.Service_Hours_Completed__c</summarizedField>
        <summaryFilterItems>
            <field>Volunteer_Hours__c.Status__c</field>
            <operation>equals</operation>
            <value>Confirmed</value>
        </summaryFilterItems>
        <summaryForeignKey>Volunteer_Hours__c.Volunteer__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Stewardship__c</fullName>
        <formula>Steward_Acknowledgement_Letter__c + Steward_Face_to_Face_Meetings__c +  Steward_Emails__c + Steward_Phone_Calls__c + Steward_Personal_Emails__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Stewardship</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trade_Status__c</fullName>
        <label>Trade Status</label>
        <picklist>
            <picklistValues>
                <fullName>Trade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Trade</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Use_Household_Salutation_Addressee__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Copies the household salutation and addressee values to the primary fields.</description>
        <inlineHelpText>Copies the household salutation and addressee to the primary fields.

Automatically checked for Head of Household.</inlineHelpText>
        <label>Use Household Salutation &amp; Addressee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Volunteer_Availability__c</fullName>
        <description>Times during the week when the individual is available to volunteer.</description>
        <inlineHelpText>Captures when volunteer is available for service</inlineHelpText>
        <label>Volunteer Availability</label>
        <picklist>
            <picklistValues>
                <fullName>Monday Morning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monday Afternoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monday Evening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday Morning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday Afternoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuesday Evening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday Morning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday Afternoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday Evening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday Morning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday Afternoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday Evening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday Morning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday Afternoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday Evening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday Morning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday Afternoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saturday Evening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunday Morning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunday Afternoon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sunday Evening</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Volunteer_Status__c</fullName>
        <description>The individual&apos;s status as a volunteer.</description>
        <label>Volunteer Status</label>
        <picklist>
            <picklistValues>
                <fullName>Applicant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Screening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Volunteer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if constituent is a current volunteer</description>
        <inlineHelpText>Checked if constituent is a current volunteer</inlineHelpText>
        <label>Volunteer</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Donor_Level__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Constituent_ID__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Donor_Level__c</field>
            <operation>equals</operation>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>First_Time_Donors</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Date_of_First_Gift__c</columns>
        <columns>Date_of_Last_Gift__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>First_Time_Donor__c</field>
            <operation>equals</operation>
            <value>true</value>
        </filters>
        <label>First Time Donors</label>
    </listViews>
    <listViews>
        <fullName>LYBUNT</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>Total_Fiscal_Year_Giving__c</columns>
        <columns>Total_Giving_Last_Year__c</columns>
        <columns>Total_Giving_Two_Years_Ago__c</columns>
        <columns>Total_Lifetime_Giving__c</columns>
        <columns>Total_Lifetime_Fundraising__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Total_Fiscal_Year_Giving__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Total_Giving_Last_Year__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>LYBUNT</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.EMAIL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>New_Donors</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>Total_Lifetime_Fundraising__c</columns>
        <columns>Total_Lifetime_Giving__c</columns>
        <columns>Solicit_Codes__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>First_Time_Donor__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filters>
        <label>New Donors</label>
    </listViews>
    <listViews>
        <fullName>SYBUNT</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>Total_Fiscal_Year_Giving__c</columns>
        <columns>Total_Giving_Last_Year__c</columns>
        <columns>Total_Giving_Two_Years_Ago__c</columns>
        <columns>Total_Lifetime_Giving__c</columns>
        <columns>Total_Lifetime_Fundraising__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Total_Fiscal_Year_Giving__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Total_Lifetime_Giving__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>SYBUNT</label>
    </listViews>
    <listViews>
        <fullName>Thai_s_View</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.PHONE4</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Constituent_ID__c</field>
            <operation>equals</operation>
            <value>1072461</value>
        </filters>
        <label>Thai&apos;s View</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Household_Required</fullName>
        <active>true</active>
        <description>Checks that Household is populated if check boxes are set to TRUE.</description>
        <errorConditionFormula>AND(ISBLANK(Household__c),
OR(Same_as_Household__c = TRUE,
Use_Household_Salutation_Addressee__c=TRUE,
 Household_Primary_Contact__c ))</errorConditionFormula>
        <errorDisplayField>Household__c</errorDisplayField>
        <errorMessage>A Household must be selected in order to use the following checkboxes:
&apos;Use Household Salutation &amp; Addressee&apos;  --
&apos;Use Household Address &amp; Phone Number&apos; --
&apos;Head of Household&apos;</errorMessage>
    </validationRules>
</CustomObject>